--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Donate For People</title>
     <!------ css__link ------>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 
     <!------ google-font__link ------>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-</head>
+  <body>
+    <!-- header section start-->
+    <header>
+      <h3>Let’s Help Those Who Are More In Need</h3>
+      <p>
+        We are always looking for individuals and groups to help! Please click
+        the link below to find out how you can become apart of something great!
+      </p>
+      <button><a href="https://www.bkash.com/bn">Donte Now</a></button>
+    </header>
 
-<body>
-
-</body>
-
+    <!-- header section end-->
+  </body>
 </html>
