--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!------ google-font__link ------>
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -18,12 +18,23 @@
   <body>
     <!-- header section start-->
     <header>
-      <h3>Let’s Help Those Who Are More In Need</h3>
-      <p>
-        We are always looking for individuals and groups to help! Please click
-        the link below to find out how you can become apart of something great!
-      </p>
-      <button><a href="https://www.bkash.com/bn">Donte Now</a></button>
+      <div class="header-left">
+        <h2>Let’s Help Those Who Are More In Need</h2>
+        <p>It's not how much we give, but how much love we put into giving</p>
+        <div class="button-div">
+          <button class="btn-1">
+            <a target="_blank" href="https://www.bkash.com/bn">Donate Now</a>
+          </button>
+          <button>
+            <a target="_blank" id="btn-2" href="https://youtu.be/M_CTwn04rAs"
+              >Watch Now</a
+            >
+          </button>
+        </div>
+      </div>
+      <div class="header-right">
+        <img src="images/Donate 1.png" alt="" />
+      </div>
     </header>
 
     <!-- header section end-->
