donate today complete

--- a/index.html
+++ b/index.html
@@ -38,5 +38,24 @@
     </header>
 
     <!-- header section end-->
+
+    <!-- donate today section  start-->
+
+    <section class="donate-today">
+      <h2>Donate Today</h2>
+      <p>
+        Happiness is the only thing that multiplies when you share it. The
+        happiness of your life depends upon the quality of your thoughts.
+      </p>
+      <div class="amount">
+        <button>100tk</button>
+        <button class="amount-2">200tk</button>
+        <button>1000tk</button>
+        <button>5000tk</button>
+      </div>
+      <input type="text" placeholder="Other Amount (Taka)" /> <br />
+      <button class="btn">Donate Now</button>
+    </section>
+    <!-- donate today section  end-->
   </body>
 </html>
