contribute section complete

--- a/index.html
+++ b/index.html
@@ -57,5 +57,85 @@
       <button class="btn">Donate Now</button>
     </section>
     <!-- donate today section  end-->
+
+    <!-- Donate Plan start-->
+
+    <section class="donate-plan">
+      <h4>Our Donate Plan</h4>
+      <p>
+        Don't be sunlight in someone's bright hours, try to be moonlight in
+        someone's dark hours
+      </p>
+      <div class="donate-cards">
+        <div class="cards card-1">
+          <img src="icons/food.png" alt="" />
+          <h4>Food for a family</h4>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit.
+          </p>
+        </div>
+        <div class="cards card-2">
+          <img src="icons/food.png" alt="" />
+          <h4>Food for a family</h4>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit.
+          </p>
+        </div>
+        <div class="cards card-3">
+          <img src="icons/food.png" alt="" />
+          <h4>Food for a family</h4>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Donate Plan end-->
+
+    <!-- contribute section  start-->
+    <section class="contributes-section">
+      <div class="contribute">
+        <div class="con-left">
+          <h4>
+            No More Homeless, <br />
+            No More Hunger
+          </h4>
+          <p>
+            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+            falli deterruisset. No duo populo animal noluisse, enim
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+            falli deterruisset.
+          </p>
+          <button class="btn">How to Contribute?</button>
+        </div>
+        <div class="con-right">
+          <img src="images/Rectangle 244.png" alt="" />
+        </div>
+      </div>
+      <div class="contribute">
+        <div class="con-left">
+          <img src="images/Rectangle 245.png" alt="" />
+        </div>
+        <div class="con-right">
+          <h4>Give Someone’s Life By Giving Of Yours</h4>
+          <p>
+            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+            falli deterruisset. No duo populo animal noluisse, enim
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+            falli deterruisset.
+          </p>
+          <button class="btn">How to Contribute?</button>
+        </div>
+      </div>
+    </section>
+    <!-- contribute section  end-->
   </body>
 </html>
