informative image add

--- a/index.html
+++ b/index.html
@@ -137,5 +137,19 @@
       </div>
     </section>
     <!-- contribute section  end-->
+
+    <!-- informative article section start-->
+
+    <section class="informative-article">
+      <h4>Informative Articles</h4>
+      <p>Please Take The Time To Check Our Some Of Our Articles</p>
+      <div class="informative-article-link">
+        <div>
+          <img src="images" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <!-- informative article section end-->
   </body>
 </html>
