informative article done

--- a/index.html
+++ b/index.html
@@ -144,8 +144,29 @@
       <h4>Informative Articles</h4>
       <p>Please Take The Time To Check Our Some Of Our Articles</p>
       <div class="informative-article-link">
-        <div>
-          <img src="images" alt="" />
+        <div class="article">
+          <a target="_blank" href="https://youtu.be/zPL1ULeTyz0"
+            ><img src="images/donation1.jpg" alt=""
+          /></a>
+          <h6>Flood Area in city</h6>
+        </div>
+        <div class="article">
+          <a target="_blank" href="https://youtu.be/zPL1ULeTyz0"
+            ><img src="images/donation2.jpg" alt=""
+          /></a>
+          <h6>Flood Area in Rural</h6>
+        </div>
+        <div class="article">
+          <a target="_blank" href="https://youtu.be/THMkzr09O-A"
+            ><img src="images/donation3.jpg" alt=""
+          /></a>
+          <h6>Flood Area in city</h6>
+        </div>
+        <div class="article">
+          <a target="_blank" href="https://youtu.be/xvZbVzSukF0"
+            ><img src="images/donation4.jpg" alt=""
+          /></a>
+          <h6>Street Children</h6>
         </div>
       </div>
     </section>
