--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!------ google-font__link ------>
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -172,5 +172,22 @@
     </section>
 
     <!-- informative article section end-->
+
+    <!-- Get My Updates start -->
+    <section class="update-section">
+      <div class="section-title">
+        <h4>Get My Updates</h4>
+        <p>
+          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+          falli deterruisset. No duo populo animal noluisse, enim
+        </p>
+      </div>
+      <form action="">
+        <input type="text" />
+        <button>Subscribe</button>
+      </form>
+    </section>
+
+    <!-- Get My Updates end -->
   </body>
 </html>
