--- a/index.html
+++ b/index.html
@@ -10,184 +10,193 @@
 
     <!------ google-font__link ------>
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Lobster&display=swap"
       rel="stylesheet"
     />
   </head>
 
   <body>
-    <!-- header section start-->
-    <header>
-      <div class="header-left">
-        <h2>Let’s Help Those Who Are More In Need</h2>
-        <p>It's not how much we give, but how much love we put into giving</p>
-        <div class="button-div">
-          <button class="btn-1">
-            <a target="_blank" href="https://www.bkash.com/bn">Donate Now</a>
-          </button>
-          <button>
-            <a target="_blank" id="btn-2" href="https://youtu.be/M_CTwn04rAs"
-              >Watch Now</a
-            >
-          </button>
+    <div class="container">
+      <!-- header section start-->
+      <header>
+        <div class="header-left">
+          <h2>Let’s Help Those Who Are More In Need</h2>
+          <p>It's not how much we give, but how much love we put into giving</p>
+          <div class="button-div">
+            <button class="btn-1">
+              <a target="_blank" href="https://www.bkash.com/bn">Donate Now</a>
+            </button>
+            <button>
+              <a target="_blank" id="btn-2" href="https://youtu.be/M_CTwn04rAs"
+                >Watch Now</a
+              >
+            </button>
+          </div>
         </div>
-      </div>
-      <div class="header-right">
-        <img src="images/Donate 1.png" alt="" />
-      </div>
-    </header>
+        <div class="header-right">
+          <img src="images/Donate 1.png" alt="" />
+        </div>
+      </header>
 
-    <!-- header section end-->
+      <!-- header section end-->
 
-    <!-- donate today section  start-->
+      <!-- donate today section  start-->
 
-    <section class="donate-today">
-      <h2>Donate Today</h2>
-      <p>
-        Happiness is the only thing that multiplies when you share it. The
-        happiness of your life depends upon the quality of your thoughts.
-      </p>
-      <div class="amount">
-        <button>100tk</button>
-        <button class="amount-2">200tk</button>
-        <button>1000tk</button>
-        <button>5000tk</button>
-      </div>
-      <input type="text" placeholder="Other Amount (Taka)" /> <br />
-      <button class="btn">Donate Now</button>
-    </section>
-    <!-- donate today section  end-->
-
-    <!-- Donate Plan start-->
-
-    <section class="donate-plan">
-      <h4>Our Donate Plan</h4>
-      <p>
-        Don't be sunlight in someone's bright hours, try to be moonlight in
-        someone's dark hours
-      </p>
-      <div class="donate-cards">
-        <div class="cards card-1">
-          <img src="icons/food.png" alt="" />
-          <h4>Food for a family</h4>
-          <p>
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit.
-          </p>
-        </div>
-        <div class="cards card-2">
-          <img src="icons/food.png" alt="" />
-          <h4>Food for a family</h4>
-          <p>
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit.
-          </p>
-        </div>
-        <div class="cards card-3">
-          <img src="icons/food.png" alt="" />
-          <h4>Food for a family</h4>
-          <p>
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Donate Plan end-->
-
-    <!-- contribute section  start-->
-    <section class="contributes-section">
-      <div class="contribute">
-        <div class="con-left">
-          <h4>
-            No More Homeless, <br />
-            No More Hunger
-          </h4>
-          <p>
-            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-            falli deterruisset. No duo populo animal noluisse, enim
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-            falli deterruisset.
-          </p>
-          <button class="btn">How to Contribute?</button>
-        </div>
-        <div class="con-right">
-          <img src="images/Rectangle 244.png" alt="" />
-        </div>
-      </div>
-      <div class="contribute">
-        <div class="con-left">
-          <img src="images/Rectangle 245.png" alt="" />
-        </div>
-        <div class="con-right">
-          <h4>Give Someone’s Life By Giving Of Yours</h4>
-          <p>
-            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-            falli deterruisset. No duo populo animal noluisse, enim
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-            falli deterruisset.
-          </p>
-          <button class="btn">How to Contribute?</button>
-        </div>
-      </div>
-    </section>
-    <!-- contribute section  end-->
-
-    <!-- informative article section start-->
-
-    <section class="informative-article">
-      <h4>Informative Articles</h4>
-      <p>Please Take The Time To Check Our Some Of Our Articles</p>
-      <div class="informative-article-link">
-        <div class="article">
-          <a target="_blank" href="https://youtu.be/zPL1ULeTyz0"
-            ><img src="images/donation1.jpg" alt=""
-          /></a>
-          <h6>Flood Area in city</h6>
-        </div>
-        <div class="article">
-          <a target="_blank" href="https://youtu.be/zPL1ULeTyz0"
-            ><img src="images/donation2.jpg" alt=""
-          /></a>
-          <h6>Flood Area in Rural</h6>
-        </div>
-        <div class="article">
-          <a target="_blank" href="https://youtu.be/THMkzr09O-A"
-            ><img src="images/donation3.jpg" alt=""
-          /></a>
-          <h6>Flood Area in city</h6>
-        </div>
-        <div class="article">
-          <a target="_blank" href="https://youtu.be/xvZbVzSukF0"
-            ><img src="images/donation4.jpg" alt=""
-          /></a>
-          <h6>Street Children</h6>
-        </div>
-      </div>
-    </section>
-
-    <!-- informative article section end-->
-
-    <!-- Get My Updates start -->
-    <section class="update-section">
-      <div class="section-title">
-        <h4>Get My Updates</h4>
+      <section class="donate-today">
+        <h2>Donate Today</h2>
         <p>
-          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-          falli deterruisset. No duo populo animal noluisse, enim
+          Happiness is the only thing that multiplies when you share it. The
+          happiness of your life depends upon the quality of your thoughts.
         </p>
-      </div>
-      <form action="">
-        <input type="text" />
-        <button>Subscribe</button>
-      </form>
-    </section>
+        <div class="amount">
+          <button>100tk</button>
+          <button class="amount-2">200tk</button>
+          <button>1000tk</button>
+          <button>5000tk</button>
+        </div>
+        <input type="text" placeholder="Other Amount (Taka)" /> <br />
+        <button class="btn">Donate Now</button>
+      </section>
+      <!-- donate today section  end-->
 
-    <!-- Get My Updates end -->
+      <!-- Donate Plan start-->
+
+      <section class="donate-plan">
+        <h4>Our Donate Plan</h4>
+        <p>
+          Don't be sunlight in someone's bright hours, try to be moonlight in
+          someone's dark hours
+        </p>
+        <div class="donate-cards">
+          <div class="cards card-1">
+            <img src="icons/food.png" alt="" />
+            <h4>Food for a family</h4>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+            </p>
+          </div>
+          <div class="cards card-2">
+            <img src="icons/food.png" alt="" />
+            <h4>Food for a family</h4>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+            </p>
+          </div>
+          <div class="cards card-3">
+            <img src="icons/food.png" alt="" />
+            <h4>Food for a family</h4>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Donate Plan end-->
+
+      <!-- contribute section  start-->
+      <section class="contributes-section">
+        <div class="contribute">
+          <div class="con-left">
+            <h4>
+              No More Homeless, <br />
+              No More Hunger
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+              falli deterruisset. No duo populo animal noluisse, enim
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+              falli deterruisset.
+            </p>
+            <button class="btn">How to Contribute?</button>
+          </div>
+          <div class="con-right">
+            <img src="images/Rectangle 244.png" alt="" />
+          </div>
+        </div>
+        <div class="contribute">
+          <div class="con-left">
+            <img src="images/Rectangle 245.png" alt="" />
+          </div>
+          <div class="con-right">
+            <h4>Give Someone’s Life By Giving Of Yours</h4>
+            <p>
+              Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+              falli deterruisset. No duo populo animal noluisse, enim
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+              falli deterruisset.
+            </p>
+            <button class="btn">How to Contribute?</button>
+          </div>
+        </div>
+      </section>
+      <!-- contribute section  end-->
+
+      <!-- informative article section start-->
+
+      <section class="informative-article">
+        <h4>Informative Articles</h4>
+        <p>Please Take The Time To Check Our Some Of Our Articles</p>
+        <div class="informative-article-link">
+          <div class="article">
+            <a target="_blank" href="https://youtu.be/zPL1ULeTyz0"
+              ><img src="images/donation1.jpg" alt=""
+            /></a>
+            <h6>Flood Area in city</h6>
+          </div>
+          <div class="article">
+            <a target="_blank" href="https://youtu.be/zPL1ULeTyz0"
+              ><img src="images/donation2.jpg" alt=""
+            /></a>
+            <h6>Flood Area in Rural</h6>
+          </div>
+          <div class="article">
+            <a target="_blank" href="https://youtu.be/THMkzr09O-A"
+              ><img src="images/donation3.jpg" alt=""
+            /></a>
+            <h6>Flood Area in city</h6>
+          </div>
+          <div class="article">
+            <a target="_blank" href="https://youtu.be/xvZbVzSukF0"
+              ><img src="images/donation4.jpg" alt=""
+            /></a>
+            <h6>Street Children</h6>
+          </div>
+        </div>
+      </section>
+
+      <!-- informative article section end-->
+
+      <!-- Get My Updates start -->
+      <section class="update-section">
+        <div class="section-title">
+          <h4>Get My Updates</h4>
+          <p>
+            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+            falli deterruisset. No duo populo animal noluisse, enim
+          </p>
+        </div>
+        <form action="">
+          <input type="text" />
+          <button>Subscribe</button>
+        </form>
+      </section>
+
+      <!-- Get My Updates end -->
+    </div>
+
+    <!-- footer section start -->
+    <footer>
+      <h6>Be Humble</h6>
+      <p>I’m gonna do it</p>
+    </footer>
+    <!-- footer section end -->
   </body>
 </html>
