--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Donate For People</title>
+    <!-- favicon link -->
+    <link rel="shortcut icon" href="icons/icon13.svg" type="image/x-icon" />
+
     <!------ css__link ------>
     <link rel="stylesheet" href="style.css" />
 
